Bottom scroll is out of the view, fix it by removing the breadcrum container height from the content view

--- a/apps/desktop/components/Folder/FolderView.module.css
+++ b/apps/desktop/components/Folder/FolderView.module.css
@@ -17,7 +17,7 @@
 .icons-container {
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 38px);
   overflow: auto;
 }
 
